# edisuku

./: .gitignore  .internal-api-key.example  AGENTS.md  CREDITS.md  README.md  SECURITY.md  biome.json  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  daily-refresh-staging.yml  daily-refresh.yml  deploy.yml
apps/api/: .dev.vars.example  .gitignore  Dockerfile  README.md  package.json  tsconfig.json  wrangler.toml.template
apps/web/: .dev.vars.example  .env.example  .gitignore  Dockerfile  README.md  components.json  env.d.ts  package.json  sentry.browser.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc.template
apps/wrapper/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/wrapper/scripts/: backfill.py  emit_pipeline_meta.py  ingest_daily.py  publish_to_d1.py
apps/wrapper/src/edinet_wrapper/: __init__.py  db.py  downloader.py  element_id_table.py  ingest.py  parser.py  schema.py  shareholders.py
apps/wrapper/tests/: test_emit_pipeline_meta.py  test_ingest.py  test_safe_extract.py  test_shareholders.py
docs/: ARCHITECTURE.md  CLOUD_PLAN.md  ENV.md  FORK.md  MANUAL_SETUP.md  MONETIZATION.md  README.md  SPEC_CSV_AND_CHAT.md  dead-code-audit.md
docs/modules/: api.md  db.md  infra.md  metrics.md  types.md  (+2 more)
e2e/: package.json  playwright.config.ts
infra/: apply-internal-api-key.sh  compose.prod.yml  compose.yml  render-wrangler-config.sh
(+116 files in other folders)
